--- a/src/style/element-variables.scss
+++ b/src/style/element-variables.scss
@@ -1,2 +1,10 @@
-$--font-size-base: 12px !important;
-$--size-base: 12px !important;
+$--font-size-base: 12px;
+$--size-base: 12px;
+
+/* 改变主题色变量 */
+// $--color-primary: teal;
+
+/* 改变 icon 字体路径变量，必需 */
+$--font-path: '~element-ui/lib/theme-chalk/fonts';
+
+@import "~element-ui/packages/theme-chalk/src/index";
